# xkcd-comics

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
ComicStore/: asgi.py  auth.py  exceptions.py  settings.py  urls.py  wsgi.py
ComicStore/utils/: cache.py
api/: admin.py  apps.py  models.py  serializer.py  service.py  urls.py  views.py
api/management/commands/: load_data_to_db.py
api/migrations/: 0001_initial.py  0002_alter_comic_day_alter_comic_description_and_more.py
tests/: test_api.py
